# Txx

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  main.cc  main.hh  preprocessed_main.cc  utils.hh
bools/ops/: and.hh  not.hh  or.hh  xor.hh
numbers/: numbers.hh
numbers/ops/: succ.hh
samples/: factorial.hh  main.hh  test_body.txx  test_prelude.txx
samples/factorial/: body.txx  prelude.txx
samples/fibonacci/: body.txx  prelude.txx
samples/insertion_sort/: body.txx  prelude.txx
samples/list_max/: body.txx  prelude.txx
test/: TODO.md  tests.hh
test/categories/: index.hh
test/categories/functions/: combinators.hh  functions.hh  on.hh
test/categories/lists/: all_any.hh  append.hh  concat.hh  filter.hh  foldl.hh  foldr.hh  head.hh  is_empty.hh  length.hh  lists.hh  map.hh  nth.hh  prepend.hh  reverse.hh  set.hh  tail.hh  take_drop.hh  zip.hh
test/categories/numbers/: add.hh  div.hh  eq.hh  ge.hh  gt.hh  incr.hh  le.hh  left_shift.hh  (+5 more)
test/tests/: add.hh  incr.hh  left_shift.hh  mul.hh  sub.hh
test/utils/: is_same.hh  numbers.hh
traits/: is_same.hh
txx/: txx.hh
txx/bits/: concept.hh
txx/bools/: concept.hh  literals.hh
txx/casts/: big_unsigned.hh  list.hh
txx/control_flow/: ternary.hh
txx/functions/: apply.hh  base.hh  combine.hh  concept.hh  curry.hh  is_same.hh  ternary.hh
txx/list/: concept.hh  list.hh
txx/literals/: bigunsigned.hh  unit.hh  unsigned8.hh
txx/meta/: any.hh  assert.hh
txx/traits/: is_same.hh
types/: none.hh
types/list/: list.hh
types/numbers/: numbers.hh
utils/: utils.hh
(+224 files in other folders)
